Fixing server side crash and updating update checker.