@@ -1,5 +1,6 @@
 package com.wuest.utilities;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
@@ -9,6 +10,7 @@ import java.util.Scanner;
 import com.google.gson.Gson;
 
 import net.minecraft.util.text.TextComponentString;
+import scala.actors.Debug;
 
 public class UpdateChecker
 {
@@ -22,11 +24,12 @@ public class UpdateChecker
 		
 		if (UpdateChecker.modInfo != null)
 		{
+			UpdateChecker.messageToShow = "[Wuest-Utilities] There is a new version available! [New Version: " 
+					+ UpdateChecker.modInfo.version + "] [Your Version: " + WuestUtilities.VERSION + "]";
+			
 			if (!WuestUtilities.VERSION.equals(modInfo.version))
 			{
 				// Old version, show a message;
-				UpdateChecker.messageToShow = "[Wuest-Utilities] There is a new version available! [New Version: " 
-						+ UpdateChecker.modInfo.version + "] [Your Version: " + WuestUtilities.VERSION + "]";
 				UpdateChecker.showMessage = true;
 				
 				System.out.println(UpdateChecker.messageToShow);
@@ -49,7 +52,17 @@ public class UpdateChecker
 		try
 		{
 			System.out.println("[Wuest-Utilities] - Checking for latest version.");
-			URL url = new URL("https://raw.githubusercontent.com/Brian-Wuest/MC-WuestUtilities/MC-1.10.2/src/main/resources/mcmod.info");
+			URL url = null;
+			
+			if (WuestUtilities.isDebug)
+			{
+				url = new File("C:\\Users\\Brian\\Documents\\GitHub\\MC-WuestUtilities\\src\\main\\resources\\mcmod.info").toURI().toURL();
+			}
+			else
+			{
+				url = new URL("https://raw.githubusercontent.com/Brian-Wuest/MC-WuestUtilities/MC-1.10.2/src/main/resources/mcmod.info");
+			}
+			
 			Gson file = new Gson();
 			InputStreamReader stream = new InputStreamReader(url.openStream(), "UTF-8");
 			ModInfo[] info = file.fromJson(stream, ModInfo[].class);
